Fixed horizontal scroll on pages

--- a/wp-content/themes/understrap/css/theme.css
+++ b/wp-content/themes/understrap/css/theme.css
@@ -8642,6 +8642,9 @@ p {
   font-size: 26px;
   font-family: "Roboto", sans-serif; }
 
+.wrapper {
+  overflow: hidden; }
+
 .article-button {
   background-color: #bc2c2d;
   color: #fff;
